[gd_scene load_steps=14 format=3 uid="uid://dexsxuqrctrna"]

[ext_resource type="Script" path="res://fakerps.gd" id="1_xxoee"]
[ext_resource type="Texture2D" uid="uid://gesx5vdp0qme" path="res://Assets/rok.png" id="2_54uwi"]
[ext_resource type="Texture2D" uid="uid://rxoch47vo0xo" path="res://Assets/paper.png" id="3_oxtfd"]
[ext_resource type="Texture2D" uid="uid://bsoea0uy3wftd" path="res://Assets/siz.png" id="4_ahci6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3b6j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ctm4s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v7q2j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y135p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5baf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lagcb"]
atlas = ExtResource("3_oxtfd")
region = Rect2(0, 0, 378, 308)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn4dm"]
atlas = ExtResource("2_54uwi")
region = Rect2(0, 0, 377, 308)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c42u"]
atlas = ExtResource("4_ahci6")
region = Rect2(0, 0, 377, 308)

[sub_resource type="SpriteFrames" id="SpriteFrames_e5nd5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lagcb")
}],
"loop": true,
"name": &"paper",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mn4dm")
}],
"loop": true,
"name": &"rock",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c42u")
}],
"loop": true,
"name": &"scissors",
"speed": 5.0
}]

[node name="FAKERPS" type="Control"]
visible = false
z_index = 4
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxoee")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 645.0
theme_override_styles/panel = SubResource("StyleBoxFlat_o3b6j")

[node name="a" type="Panel" parent="Panel"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ctm4s")

[node name="RockB" type="Button" parent="Panel/a"]
layout_mode = 0
offset_left = 374.0
offset_top = 316.0
offset_right = 759.0
offset_bottom = 632.0
icon = ExtResource("2_54uwi")
flat = true

[node name="PaperB" type="Button" parent="Panel/a"]
layout_mode = 0
offset_left = 29.0
offset_top = 76.0
offset_right = 465.0
offset_bottom = 392.0
icon = ExtResource("3_oxtfd")
flat = true

[node name="ScissorsB" type="Button" parent="Panel/a"]
layout_mode = 0
offset_left = 718.0
offset_top = 29.0
offset_right = 1103.0
offset_bottom = 345.0
icon = ExtResource("4_ahci6")
flat = true

[node name="WIN" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v7q2j")

[node name="Label" type="Label" parent="Panel/WIN"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -41.5
offset_right = 232.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "YOU WON LMAO"

[node name="LOSS" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y135p")

[node name="Label" type="Label" parent="Panel/LOSS"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -41.5
offset_right = 232.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "YOU LOST LMAO"

[node name="TIE" type="Panel" parent="Panel"]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d5baf")

[node name="Label" type="Label" parent="Panel/TIE"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -41.5
offset_right = 232.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "YOU TIED LMAO"

[node name="tc" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -301.0
offset_bottom = 69.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "THEY CHOSE"

[node name="choice" type="AnimatedSprite2D" parent="Panel/tc"]
position = Vector2(112, 229)
sprite_frames = SubResource("SpriteFrames_e5nd5")
animation = &"scissors"

[node name="yc" type="Label" parent="Panel"]
visible = false
layout_mode = 0
offset_right = 283.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 50
text = "YOU CHOSE"

[node name="choice" type="AnimatedSprite2D" parent="Panel/yc"]
position = Vector2(187, 229)
sprite_frames = SubResource("SpriteFrames_e5nd5")
animation = &"scissors"

[connection signal="pressed" from="Panel/a/RockB" to="." method="_on_rock_b_pressed"]
[connection signal="pressed" from="Panel/a/PaperB" to="." method="_on_paper_b_pressed"]
[connection signal="pressed" from="Panel/a/ScissorsB" to="." method="_on_scissors_b_pressed"]
